--- a/BloodDonor/app/src/main/res/layout/fragment_notifications.xml
+++ b/BloodDonor/app/src/main/res/layout/fragment_notifications.xml
@@ -7,9 +7,9 @@
         tools:context=".user_interface.notifications.NotificationsFragment">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginTop="25dp"
+            android:layout_width="@dimen/dp_120"
+            android:layout_height="@dimen/dp_120"
+            android:layout_marginTop="@dimen/dp_25"
             android:textAlignment="center"
             android:layout_centerHorizontal="true"
             android:src="@drawable/blood_drop_"
@@ -21,10 +21,10 @@
             android:layout_alignParentBottom="true"
             android:textAlignment="textStart"
             android:textColor="@color/black"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginEnd="@dimen/dp_15"
+            android:layout_marginBottom="@dimen/dp_10"
+            android:layout_marginStart="@dimen/dp_15"
             android:text="@string/about_message"/>
 
 
