--- a/BloodDonor/app/src/main/res/layout/item_user.xml
+++ b/BloodDonor/app/src/main/res/layout/item_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
@@ -9,18 +10,18 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_10"
         android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="@dimen/dp_96"
+            android:layout_height="@dimen/dp_96"
+            android:layout_marginStart="@dimen/dp_5"
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginBottom="@dimen/dp_5"
             android:src="@drawable/profile_image"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -28,20 +29,20 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="wrap_content"
-            android:layout_height="95dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="15dp"
+            android:layout_height="@dimen/dp_95"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginStart="@dimen/dp_15"
             app:layout_constraintStart_toEndOf="@id/profile_image"
             app:layout_constraintEnd_toStartOf="@id/ivNumber"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/tvFirstName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="dhanashreee Rane"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/sp_15"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/tvGroupType"
                 app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textColor="@color/red"
-                android:textSize="15sp"
+                android:textSize="@dimen/sp_15"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -61,12 +62,12 @@
 
             <TextView
                 android:id="@+id/tvAge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="13dp"
+                android:layout_marginStart="@dimen/dp_20"
                 android:text=""
+                android:textSize="@dimen/sp_15"
                 android:textStyle="bold"
-                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tvGroupType"
                 app:layout_constraintTop_toBottomOf="@id/tvFirstName" />
@@ -76,36 +77,24 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
         <ImageView
             android:id="@+id/ivNumber"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
             android:background="@drawable/circular_grey_bordersolid"
-            android:padding="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:padding="@dimen/dp_10"
+            android:layout_marginStart="@dimen/dp_20"
+            android:layout_marginEnd="@dimen/dp_20"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/constraintLayout"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/ic_call_24dp" />
 
-<!--        <View-->
-<!--            android:id="@+id/ivNumber"-->
-<!--            android:layout_width="25dp"-->
-<!--            android:layout_height="25dp"-->
-<!--            android:layout_marginStart="20dp"-->
-<!--            android:layout_marginEnd="20dp"-->
-<!--            android:background="@drawable/telephone"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-
-<!--            app:layout_constraintTop_toTopOf="parent" -->
-<!--            />-->
 
         <View
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="@dimen/dp_1"
+            android:layout_marginTop="@dimen/dp_5"
             android:background="@color/grey1"
             app:layout_constraintTop_toBottomOf="@id/profile_image"
             app:layout_constraintStart_toStartOf="parent" />
