--- a/BloodDonor/app/src/main/res/values/dimens.xml
+++ b/BloodDonor/app/src/main/res/values/dimens.xml
@@ -5,12 +5,25 @@
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_25">25dp</dimen>
     <dimen name="dp_20">20dp</dimen>
+    <dimen name="dp_95">95dp</dimen>
+    <dimen name="dp_70">70dp</dimen>
+    <dimen name="dp_7">7dp</dimen>
     <dimen name="dp_10">10dp</dimen>
+    <dimen name="dp_50">50dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
+    <dimen name="dp_12">12dp</dimen>
+    <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_5">5dp</dimen>
+    <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_160">160dp</dimen>
     <dimen name="dp_30">30dp</dimen>
+    <dimen name="dp_45">45dp</dimen>
     <dimen name="dp_3">3dp</dimen>
     <dimen name="sp_35">35sp</dimen>
+    <dimen name="sp_18">18sp</dimen>
+    <dimen name="sp_30">30sp</dimen>
     <dimen name="dp_35">35dp</dimen>
+    <dimen name="dp_15">15dp</dimen>
     <dimen name="dp_14">14dp</dimen>
     <dimen name="sp_20">20sp</dimen>
     <dimen name="sp_25">25sp</dimen>
